2010-07-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/im-gtk.cpp|h: Fix the random shutdown crash here by clearing the
	client window when the parent widget is destroyed.

2010-07-17  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* runtime.cpp: Initialize a variable to make valgrind happy.

2010-07-16  Jeffrey Stedfast  <fejj@novell.com>

	Fixes drt 2004.

	* multiscaleimage.cpp (StopDownloading): Need to reset
	n_downloading to 0 so that any future download requests can
	happen.

2010-07-16  Alan McGovern  <amcgovern@novell.com>

	* glyphs.h:
	* glyphs.cpp: Always validate the Uri when it changes
	  regardless of whether the element is loaded. This way we
	  don't need the validation in SetParent and nothing appears
	  to have regressed...

	* media.cpp:
	* mediaelement.cpp: Don't check if the element is attached
	  when verifying the uri. Needed to allow drt 171/173 to pass.

	* runtime.cpp: Surface::LoadEvent has to be emitted after the
	  top level has loaded according to drt 21.

	* uielement.cpp: Make sure we don't accidentally double-add
	  loaded handlers.

	* xaml.cpp: Don't set every element as being attached.

2010-07-16  Alan McGovern  <amcgovern@novell.com>

	* template.h:
	* validators.cpp: Validate ControlTemplate::TargetType to make
	  drt 349 a bit happier.

2010-07-15  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp: Make sure we always walk new layers for loaded
	  handlers to ensure our warning popups vanish.

2010-07-15  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (OnCollectionChanged): If the collection
	that changed was not the subimages property, then chain up
	immediately. Fixes some bugs introduced yesterday and should also
	help with performance since we don't need to re-sort the subimages
	unnecessarily.

2010-07-15  David Reveman  <davidr@novell.com>

	* effect.h: Composite and UpdateShader should be protected.

	* uielement.cpp (PostRender):
	* effect.h: